tests/agl/rejections/type/parametricity_eq.agl
def same[T](a: T, b: T) -> bool = (a == b)
same(1, 2)
